fix editor vertical scrollbar when lbl-list is "show if needed"

--- a/src/app/css/editor.css
+++ b/src/app/css/editor.css
@@ -25,7 +25,7 @@ span.cm-keyword {
 #editorcontainer {
     font-size: 12px;
     height: calc(100% - 16px);
-    width: 100%;
+    width: calc(100% - 20px);
     padding-top: 30px; /* Fix scrollbar bug */
     margin-top: -30px;
 
